SNRGY-2457 add /data-availability endpoint
